# rustos

./: Cargo.toml  README.md  users.json
src/: auth.rs  main.rs  plugin.rs  plugin_manager.rs  session.rs  shell.rs  utils.rs
src/commands/: crabgpt.rs  crabtop.rs  encrypt.rs  games.rs  roast.rs
