[package]
name = "rustos"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
axum ="0.6"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
rpassword = "7.0"
sha2 = "0.10"
tower = "0.4"
